<resources>
    <string name="app_name">Payz24</string>
    <string name="open_sans_bold">open_sans_bold.ttf</string>
    <string name="open_sans_light">open_sans_light.ttf</string>
    <string name="open_sans_regular">open_sans_regular.ttf</string>
    <string name="open_sans_semibold">open_sans_semibold.ttf</string>
    <string name="aller_std_bold">aller_std_bold.ttf</string>
    <string name="aller_std_light">aller_std_light.ttf</string>
    <string name="aller_std_lt">aller_std_lt.ttf</string>
    <string name="aller_std_regular">aller_std_regular.ttf</string>
    <string name="status_error">Something went wrong, please try again later</string>
    <string name="network_error">Please check your network connection</string>
    <string name="ok">Ok</string>
    <string name="Are_you_sure_do_you_want_to_exit">Are you sure do you want to exit?</string>
    <string name="loading_please_wait">Loading please wait...</string>
    <string name="recharge_and_pay_bills"><![CDATA[Recharge & Pay Bills]]></string>
    <string name="book_on_payz_24">Book On Payz24</string>
    <string name="shop_on_payz_24">Shop On Payz24</string>
    <string name="mobile">Mobile</string>
    <string name="dth">DTH</string>
    <string name="dthr">DTH Recharge</string>
    <string name="electricity">Electricity</string>
    <string name="credit_card">Credit Card</string>
    <string name="data_card">Datacard</string>
    <string name="gas">Gas</string>
    <string name="broadband">Broadband</string>
    <string name="landline">Landline</string>
    <string name="insurance">Insurance</string>
    <string name="flights">Flights</string>
    <string name="bus">Bus</string>
    <string name="hotels">Hotels</string>
    <string name="movies">Movies</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="data_recharges">Datacard Recharge</string>
    <string name="change">Change</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="select_circle">Select circle</string>
    <string name="enter_amount">Enter amount</string>
    <string name="view_plans">View plans</string>
    <string name="operators">Operators</string>
    <string name="select_operator">Select operator</string>
    <string name="electricty_operator">Electricity Board</string>
    <string name="gas_operator">Gas Board</string>
    <string name="andhra_pradesh_telangana"><![CDATA[Andhra Pradesh & Telangana]]></string>
    <string name="assam">Assam</string>
    <string name="bihar_jharkhand"><![CDATA[Bihar & Jharkhand]]></string>
    <string name="chennai">Chennai</string>
    <string name="delhi_ncr"><![CDATA[Delhi/NCR]]></string>
    <string name="gujarat">Gujarat</string>
    <string name="haryana">Haryana</string>
    <string name="himachal_pradesh">Himachal Pradesh</string>
    <string name="jammu_kashmir"><![CDATA[Jammu & Kashmir]]></string>
    <string name="karnataka">Karnataka</string>
    <string name="kerala">Kerala</string>
    <string name="kolkata">Kolkata</string>
    <string name="madhya_pradesh_chhattisgarh"><![CDATA[Madhya Pradesh]]></string>
    <string name="maharashtra_goa"><![CDATA[Maharashtra]]></string>
    <string name="mumbai">Mumbai</string>
    <string name="north_east">North East</string>
    <string name="orissa">Orissa</string>
    <string name="punjab">Punjab</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="tamilnadu">Tamil Nadu</string>
    <string name="uttar_pradesh_east">Uttar Pradesh (E)</string>
    <string name="uttar_pradesh_west_uttarakhand"><![CDATA[Uttar Pradesh (W)]]></string>
    <string name="west_bengal">West Bengal</string>
    <string name="circles">Circles</string>
    <string name="recharge">Recharge</string>
    <string name="pro">Proceed</string>
    <string name="debit_from">Debit from:</string>
    <string name="wallet_balance">Wallet Balance:</string>
    <string name="debit_card">Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="use_debit_card">Use Debit Card</string>
    <string name="enter_your_card_number">Enter your card number</string>
    <string name="valid_up_to">Valid up to</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv_code">CVV code</string>
    <string name="use_credit_card">Use Credit Card</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="type_number_name">Type number, name</string>
    <string name="contact_number">Contact Number</string>
    <string name="consumer_number">Consumer Number</string>
    <string name="contact_name">ContactName</string>
    <string name="service_provider_name_is_invalid">Service provider name is invalid please try after some time</string>
    <string name="full_talk_time">FULL TALKTIME</string>
    <string name="top_up">TOP UP</string>
    <string name="three_four_g">3G/4G Data</string>
    <string name="two_g">2G Data</string>
    <string name="sms">SMS</string>
    <string name="rate_cutter">RATECUTTER</string>
    <string name="roaming">ROAMING</string>
    <string name="no_data_available">No data available</string>
    <string name="circle_name">CircleName</string>
    <string name="service_provider_name">ServiceProviderName</string>
    <string name="talk_time">Talktime:</string>
    <string name="Rs">\u20B9</string>
    <string name="data">Data:</string>
    <string name="validity">Validity:</string>
    <string name="sorry_no">Sorry, no plans available for this category</string>
    <string name="sorry_no_plans_available_for_this_category">Sorry, no plans available for this category</string>
    <string name="no_plans_available">No plans available</string>
    <string name="benefit">Benefit</string>
    <string name="full_talk_time_short_code">FTT</string>
    <string name="top_up_short_code">TUP</string>
    <string name="three_g_four_g_short_code">3G</string>
    <string name="two_g_short_code">2G</string>
    <string name="sms_short_code">SMS</string>
    <string name="rate_cutter_short_code">LSC</string>
    <string name="roaming_short_code">RMG</string>
    <string name="please_select_service_operator">Please select service operator</string>
    <string name="please_select_circle">Please select circle</string>
    <string name="please_enter_recharge_amount">Please enter recharge amount</string>
    <string name="idea">Idea</string>
    <string name="airtel">Airtel</string>
    <string name="aircel">Aircel</string>
    <string name="mts">MTS</string>
    <string name="reliance_gsm_cdma">Reliance GSM/CDMA</string>
    <string name="tata_indicom">Tata Indicom</string>
    <string name="tata_docomo_flexi">TATA Docomo Flexi</string>
    <string name="tata_docomo_special">TATA Docomo Special</string>
    <string name="bsnl_top_up">BSNL TopUp</string>
    <string name="bsnl_validity_special">BSNL (Validity / Special)</string>
    <string name="vodafone">Vodafone</string>
    <string name="uninor">Uninor</string>
    <string name="mtnl_top_up">MTNL TopUp</string>
    <string name="mtnl_validity_special">MTNL (Validity / Special)</string>
    <string name="please_enter_valid_amount">Please enter valid amount</string>
    <string name="view_palns_disclaimer">Disclaimer: we support most of types of recharges,but please check with your operator before you proceed</string>
    <string name="search_for_bus_tickets">Search for Bus Tickets</string>
    <string name="leaving_from">Leaving from</string>
    <string name="from">From</string>
    <string name="going_to">Going to</string>
    <string name="to">To</string>
    <string name="journey_date">Journey Date</string>
    <string name="search">Search</string>
    <string name="no_stations_found">No stations found</string>
    <string name="search_for_source_city">Search for source city</string>
    <string name="clicked_on">clickedOn</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="source_and_destination_should_not_be_same">Source and destination should not be same</string>
    <string name="please_select_leaving_station">Please select leaving from station</string>
    <string name="please_select_going_to_station">Please select going to station</string>
    <string name="no_routes_available">No routes available</string>
    <string name="select_your_seat">Select your seat</string>
    <string name="doj">DOJ</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="close">Close</string>
    <string name="information">Information</string>
    <string name="seat_legends">Seat Legends</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="hrs_before_bus_start_time">Hrs before bus start time</string>
    <string name="refund_percentage">Refund%</string>
    <string name="below_five_hours_of_bus_start_time">B/W 0-5 hours of bus start time</string>
    <string name="zero_percentage">0%</string>
    <string name="above_five_hours_of_bus_start_time">Above 5 hours of bus start time</string>
    <string name="ninty_percentage">90%</string>
    <string name="available">Available</string>
    <string name="available_for_ladies">Available for ladies</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="travels_names">TravelsName</string>
    <string name="seat_booking_tips">Seat Booking Tips</string>
    <string name="guidelines_for_getting_assured_seat">Guidelines for getting assured seat</string>
    <string name="seat_no">Seat No.s</string>
    <string name="total">Total</string>
    <string name="proceed">Proceed</string>
    <string name="sleeper_seat_ladies">Sleeper seat ladies</string>
    <string name="sleeper_seat_normal">Sleeper seat normal</string>
    <string name="seat_ladies">Seat ladies</string>
    <string name="bus_seat_normal">bus seat normal</string>
    <string name="sorry_maximum_six_seats">Sorry, Maximum 6 seats allowed per passenger</string>
    <string name="single_lady_traveller_cannot_book_beside_a_male">Single Lady Traveller cannot book beside a Male</string>
    <string name="new_user_sign_up_here">New User? Sign Up here</string>
    <string name="sign_in">SignIn</string>
    <string name="email_mobile_number">Email / Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="search_for_boarding_points">Search for boarding points</string>
    <string name="contact_details">Contact Details</string>
    <string name="your_ticket_info_will_be_sent_here">Your ticket info will be sent here</string>
    <string name="email_address">Email Address</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="age">Age</string>
    <string name="choose_your_boarding_point">Choose your boarding point</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="please_enter_full_name">Please enter FullName</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_class">Select a Class</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="fare_break_up">Fare Breakup</string>
    <string name="hold_up_tight">Please Wait we are Searching For Best Fares it will Take Few seconds</string>
    <string name="fetching_best_fares">Fetching best fares</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="add_money">Add Money</string>
    <string name="money_continue">Continue</string>
</resources>