<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.payz24.customviews.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/hrs_before_bus_start_time"
            android:textColor="@color/black"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/refund_percentage"
            android:textColor="@color/colorPrimary"
            fonts:custom_font="@string/aller_std_regular" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_of_value_ten"
        android:orientation="horizontal">

        <com.payz24.customviews.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/below_five_hours_of_bus_start_time"
            android:textColor="@color/black_80"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/zero_percentage"
            android:textColor="@color/black_80"
            fonts:custom_font="@string/aller_std_regular" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_of_value_ten"
        android:orientation="horizontal">

        <com.payz24.customviews.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/above_five_hours_of_bus_start_time"
            android:textColor="@color/black_80"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/ninty_percentage"
            android:textColor="@color/black_80"
            fonts:custom_font="@string/aller_std_regular" />

    </LinearLayout>
</LinearLayout>