<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_of_value_fifteen"
        android:orientation="horizontal">

        <com.payz24.customviews.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/select_a_class"
            android:textColor="@color/black"
            fonts:custom_font="@string/aller_std_regular" />

        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvClassCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            fonts:custom_font="@string/aller_std_regular" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvEconomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_of_value_fifteen"
        android:text="@string/economy"
        android:textColor="@color/black"
        fonts:custom_font="@string/aller_std_regular" />

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_of_value_fifteen"
        android:text="@string/business"
        android:textColor="@color/black"
        fonts:custom_font="@string/aller_std_regular" />
</LinearLayout>