<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/layout"
        layout="@layout/layout_one_way_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivFlightImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <com.payz24.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_thirty"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/hold_up_tight"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/fetching_best_fares"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_ten"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/cancel"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFlightsDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFlightDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="@dimen/size_of_value_fifteen"
            android:scrollbarThumbVertical="@drawable/scroll_bar_drawable"
            android:scrollbars="vertical"   />

        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_routes_available"
            android:textColor="@color/black"
            android:visibility="gone"
            fonts:custom_font="@string/aller_std_regular" />
    </LinearLayout>
</LinearLayout>