<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivFlightImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <com.payz24.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_thirty"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/hold_up_tight"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/fetching_best_fares"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_regular" />


        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_ten"
            android:gravity="center"
            android:padding="@dimen/size_of_value_ten"
            android:text="@string/cancel"
            android:textColor="@color/white"
            fonts:custom_font="@string/aller_std_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/layout"
            layout="@layout/layout_domestic_flights_search_round_trip_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/scroll_bar_drawable"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>


</LinearLayout>