<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_of_value_ten"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivCollectionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:scaleType="centerCrop" />

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvCollectionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/shop_on_payz_24"
        android:textColor="@color/black"
        fonts:custom_font="@string/aller_std_regular" />
</LinearLayout>