<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llOperator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/size_of_value_five">

    <ImageView
        android:id="@+id/ivOperatorImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_clear" />

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvOperatorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/size_of_value_twenty"
        android:layout_marginStart="@dimen/size_of_value_twenty"
        android:gravity="center"
        android:text="@string/operators"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_of_value_eighteen"
        fonts:custom_font="@string/open_sans_regular" />
</LinearLayout>