<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size_of_value_ten">

        <com.payz24.customviews.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_of_value_five"
            android:layout_weight="90"
            android:padding="@dimen/size_of_value_five"
            android:text="@string/add_money"
            android:textColor="@color/black"
            fonts:custom_font="@string/open_sans_bold" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="10"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_cancel"
            android:tint="@color/medium_dark_grey" />
    </LinearLayout>


    <com.payz24.customviews.CustomEditText
        android:id="@+id/etMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_of_value_ten"
        android:background="@drawable/continue_bg"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:padding="@dimen/size_of_value_fifteen"
        fonts:custom_font="@string/aller_std_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_of_value_ten"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivThousand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/ivFiveHundred"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher_round" />


        <ImageView
            android:id="@+id/ivHundred"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvContinue"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/size_of_value_ten"
        android:layout_marginTop="@dimen/size_of_value_fifteen"
        android:background="@drawable/wallet_balance_bg"
        android:gravity="center"
        android:padding="@dimen/size_of_value_five"
        android:text="@string/money_continue"
        android:textColor="@color/white"
        fonts:custom_font="@string/aller_std_regular" />

</LinearLayout>