<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/size_of_value_ten">

    <com.payz24.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fare_break_up"
        android:textColor="@color/black"
        fonts:custom_font="@string/aller_std_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_of_value_ten"
        android:orientation="horizontal">


        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_of_value_five"
            android:layout_marginRight="@dimen/size_of_value_five"
            android:text="Hyderabad"
            android:textColor="@color/black"
            fonts:custom_font="@string/aller_std_regular" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/size_of_value_five"
            android:layout_marginRight="@dimen/size_of_value_five"
            android:layout_marginTop="@dimen/size_of_value_one"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_flight_arrow" />

        <com.payz24.customviews.CustomTextView
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="New York"
            android:textColor="@color/black"
            fonts:custom_font="@string/aller_std_regular" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size_of_value_two"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_of_value_five">

        <LinearLayout
            android:id="@+id/llFareContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.payz24.customviews.CustomTextView
        android:id="@+id/tvClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/size_of_value_fifteen"
        android:padding="@dimen/size_of_value_ten"
        android:gravity="end"
        android:text="@string/close"
        android:textColor="@color/colorPrimary"
        fonts:custom_font="@string/aller_std_bold" />
</LinearLayout>